fix visibility

--- a/www/landing/style.css
+++ b/www/landing/style.css
@@ -26,6 +26,9 @@ body {
 	border: 1px dashed black;
 	background: #eee;
 }
+#chatOne.visible {
+        display: block;
+}
 
 .left, .right {
 	position: absolute;
